--- a/front-end/src/components/Cards/CardStyle.scss
+++ b/front-end/src/components/Cards/CardStyle.scss
@@ -1,6 +1,7 @@
 .container-card{
     display: flex;
     margin-top: 10%;
+    justify-content: space-evenly;
     .card {
         box-shadow:(10px 8px 16px 0 rgba(0, 0, 0, 0));
         transition: 0.3s;
